aplicacion oficial del faro de oriente

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ document.addEventListener('touchmove', function (e) { e.preventDefault(); }, fal
 			</div>
 
            </div>
-            <div class="header-1"><div id="header-2"><h3>cartelera</h3></div></div>
+            <div class="header-1"><div id="header-2"><h3>Cartelera</h3></div></div>
 <div id="wrapper">
 	<div id="scroller">
     <a href="especiales.html"><div id="especiales" ><input id="esp" type="image" src="img/farito.png" /><p>Especiales</p></div></a>
