--- a/dos.html
+++ b/dos.html
@@ -53,7 +53,12 @@
    });
 
 </script>
-
+<script type="text/javascript">
+$(document).ready(function(){
+   var refreshId = setInterval('load-async', 3000);
+   $.ajaxSetup({ cache: false });
+ });
+</script>
 
 </body>
 </html>
