--- a/dos.html
+++ b/dos.html
@@ -46,16 +46,17 @@
 
       </footer>
 
+</script>
 <script type="text/javascript">
- $(document).ready(function(){
-	  $('#contenido').text('Cargando....');
-      $("#contenido").load("http://www.farodeoriente.org/prueba/dos.html");
-   });
-
 $(document).ready(function(){
    var refreshId = setInterval('load-async', 3000);
    $.ajaxSetup({ cache: false });
  });
+ 
+ $(document).ready(function(){
+	  $("#contenido").text('Cargando....');
+      $("#contenido").load("http://www.farodeoriente.org/prueba/dos.html");
+   });
 </script>
 
 </body>
