--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
-<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-<meta name="theme-color" content="#4285f4"/>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title></title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+
 <link rel="stylesheet" type="text/css" href="css/page.css" />
 <link rel="stylesheet" type="text/css" href="css/iscrolla.css"/>
 <script type="text/javascript" charset="utf-8" src="plugins/cordova-plugin-statusbar/www/statusbar.js"></script>
@@ -12,14 +13,13 @@
 <script type="text/javascript" charset="utf-8" src="plugins/cordova-plugin-whitelist/whitelist.js"></script>
 </script>
 
-<script type="text/javascript" charset="utf-8" src="js/externos.js"></script>
 <script type="text/javascript" src="js/iscrolla.js"></script>
-<script src="js/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 <!--<script type="text/javascript" src="js/jquery.js"></script>-->
 <script type="text/javascript" src="js/fastclick.js"></script>
 
-    <script src="js/jquery.excoloSlider.js"></script>
-    <script src="/css/jquery.exocoloSlider.css" rel="stylesheet"></script>
+    <script type="text/javascript" src="js/jquery.excoloSlider.js"></script>
+    <script type="text/javascript" src="/css/jquery.exocoloSlider.css" rel="stylesheet"></script>
     
 
      <script type="text/javascript">
@@ -122,17 +122,9 @@ document.addEventListener('touchmove', function (e) { e.preventDefault(); }, fal
     <div><a href="http://flic.kr/s/aHsiTzgDMW"><input type="image" src="img/Flicker_White.png"/></a></div>
 
       </footer>
-<script type="text/javascript">
-   $(document).ready(function(){
-   $("#face").click(function(evento){
-      evento.preventDefault();
-      $('link').load("http://www.facebook.com/faro.deoriente");
-   });
-});
-</script>
      
-<script src="js/jquery.jrumble.1.3.min.js"></script> 
-<script src="js/prettify.js"></script>
+<script type="text/javascript" src="js/jquery.jrumble.1.3.min.js"></script> 
+<script type="" src="js/prettify.js"></script>
 <script>
     $(document).ready(function() {
 		$('#lit,#cin,#art,#esp,#gal,#inf,#clu,#mus').jrumble({
@@ -154,6 +146,7 @@ speed: 100
             $("#sliderA").excoloSlider();
         });
     </script>
+</script>
 <script type="text/javascript">
 $(document).ready(function(){
    var refreshId = setInterval('load-async', 3000);
@@ -161,5 +154,6 @@ $(document).ready(function(){
  });
  
 </script>
+
 </body>
 </html>
