aplicacion oficial del faro de oriente

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <script type="text/javascript" src="js/jquery.excoloSlider.js"></script>
     <script type="text/javascript" src="/css/jquery.exocoloSlider.css" rel="stylesheet"></script>
-    
+    <script type="text/javascript" src="js/cordova.js"></script>   
 
      <script type="text/javascript">
 
@@ -88,8 +88,7 @@ document.addEventListener('touchmove', function (e) { e.preventDefault(); }, fal
 				<div id="esp2"><a href="dos.html"><img src="http://www.farodeoriente.org/prueba/dos.jpg"/></a></div>
 				<div id="esp3"><a href="tres.html"><img src="http://www.farodeoriente.org/prueba/tres.jpg"/></a></div>
 				<div id="esp4"><a href="cuatro.html"><img src="http://www.farodeoriente.org/prueba/cuatro.jpg"/></a></div>
-				<div id="esp5"><a href="cinco.html"><img src="http://www.farodeoriente.org/prueba/cinco.jpg"/></a></div>
-				<div id="esp6"><a href="seis.html"><img src="http://www.farodeoriente.org/prueba/seis.jpg"/></a></div>
+
 			</div>
 
            </div>
