--- a/index.html
+++ b/index.html
@@ -83,13 +83,7 @@ document.addEventListener('touchmove', function (e) { e.preventDefault(); }, fal
 <div class="page">
     <div class="center">
 <div class="cartelera">
-			<div id="sliderA" class="slider">
-				<div id="esp1"><a href="uno.html"><img src="http://www.farodeoriente.org/prueba/uno.jpg"/></a></div>
-				<div id="esp2"><a href="dos.html"><img src="http://www.farodeoriente.org/prueba/dos.jpg"/></a></div>
-				<div id="esp3"><a href="tres.html"><img src="http://www.farodeoriente.org/prueba/tres.jpg"/></a></div>
-				<div id="esp4"><a href="cuatro.html"><img src="http://www.farodeoriente.org/prueba/cuatro.jpg"/></a></div>
-
-			</div>
+			
 
            </div>
             <div class="header-1"><div id="header-2"><h3>Cartelera</h3></div></div>
@@ -145,12 +139,16 @@ speed: 100
             $("#sliderA").excoloSlider();
         });
     </script>
-</script>
+
 <script type="text/javascript">
 $(document).ready(function(){
    var refreshId = setInterval('load-async', 3000);
    $.ajaxSetup({ cache: false });
  });
+ 
+ $(document).ready(function(){
+      $(".cartelera").load("http://www.farodeoriente.org/prueba/slider.html");
+   });
  
 </script>
 
