aplicacion del faro de oriente

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script type="text/javascript" src="js/fastclick.js"></script>
 
     <script type="text/javascript" src="js/jquery.excoloSlider.js"></script>
-    <script type="text/javascript" src="/css/jquery.exocoloSlider.css" rel="stylesheet"></script>
+    <script type="text/javascript" src="css/jquery.exocoloSlider.css" rel="stylesheet"></script>
     <script type="text/javascript" src="js/cordova.js"></script>   
 
      <script type="text/javascript">
@@ -133,12 +133,12 @@ speed: 100
 </script>
 
 
-
-    <script>
+<script type="text/javascript">
         $(function () {
             $("#sliderA").excoloSlider();
         });
     </script>
+
 
 <script type="text/javascript">
 $(document).ready(function(){
