--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@ document.addEventListener('touchmove', function (e) { e.preventDefault(); }, fal
 <div class="page">
     <div class="center">
 <div class="cartelera">
-			
+<div id="sliderA" class="slider">
 
-           </div>
+
+</div>	
+</div>
             <div class="header-1"><div id="header-2"><h3>Cartelera</h3></div></div>
 <div id="wrapper">
 	<div id="scroller">
@@ -147,7 +149,7 @@ $(document).ready(function(){
  });
  
  $(document).ready(function(){
-      $(".cartelera").load("http://www.farodeoriente.org/prueba/slider.html");
+      $(".silder").load("http://www.farodeoriente.org/prueba/slider.html");
    });
  
 </script>
