aplicacion del faro de oriente

--- a/index.html
+++ b/index.html
@@ -83,10 +83,8 @@ document.addEventListener('touchmove', function (e) { e.preventDefault(); }, fal
 <div class="page">
     <div class="center">
 <div class="cartelera">
-<div id="sliderA" class="slider">
 
 
-</div>	
 </div>
             <div class="header-1"><div id="header-2"><h3>Cartelera</h3></div></div>
 <div id="wrapper">
@@ -149,7 +147,8 @@ $(document).ready(function(){
  });
  
  $(document).ready(function(){
-      $(".silder").load("http://www.farodeoriente.org/prueba/slider.html");
+
+      $(".cartelera").load("http://www.farodeoriente.org/prueba/slider.html");
    });
  
 </script>
