aplicacion del faro de oriente

--- a/index.html
+++ b/index.html
@@ -82,9 +82,37 @@ document.addEventListener('touchmove', function (e) { e.preventDefault(); }, fal
 </header>
 <div class="page">
     <div class="center">
+<div class="cartelera">
+<div id="sliderA" class="slider">
+				<div id="esp1"><a href="uno.html"><img src="http://www.farodeoriente.org/prueba/uno.jpg"/></a></div>
+				<div id="esp2"><a href="dos.html"><img src="http://www.farodeoriente.org/prueba/dos.jpg"/></a></div>
+				<div id="esp3"><a href="tres.html"><img src="http://www.farodeoriente.org/prueba/inscripciones.jpg"/></a></div>
+
+			</div>
+
+
+</div>
+            <div class="header-1"><div id="header-2"><h3>Cartelera</h3></div></div>
+<div id="wrapper">
+	<div id="scroller">
+    <a href="especiales.html"><div id="especiales" ><input id="esp" type="image" src="img/farito.png" /><p>Especiales</p></div></a>
+    <a href="musica.html"><div id="musica"><input id="mus" type="image" src="img/concha-01.png"/><p>Música</p></div></a>
+    <a href="infantil.html"><div id="infantil"><input id="inf" type="image" src="img/balon.png" /><p>Faro infantil</p></div></a>
+    <a href="cineclub.html"><div id="cineclub"><input id="cin" type="image" src="img/ancla.png" /><p>Cineclub</p></div></a>
+    <a href="literatura.html"><div id="literatura"><input id="lit" type="image" src="img/ave-01.png" /><p>Literatura</p></div></a>
+    <a href="galeria.html"><div id="galeria"><input id="gal" type="image" src="img/fish.png" /><p>Galería</p></div></a>
+    <a href="artes.html"><div id="artes"><input id="art" type="image" src="img/sirena.png" /><p>Artes escénicas</p></div></a>
+   <a href="clubhouse.html"> <div id="clubhouse"><input id="clu" type="image" src="img/brujula-01.png" /><p>Clubhouse</p></div></a>
+       <a href="talleres.html"><div id="especiales" ><input id="esp" type="image" src="img/nudo.png" /><p>Talleres</p></div></a>
+    <a href="comunidad.html"><div id="musica"><input id="mus" type="image" src="img/comunidad.png"/><p>Servicios a la Comunidad</p></div></a>
+    <a href="ludoteca.html"><div id="infantil"><input id="inf" type="image" src="img/ludoteca.png" /><p>Ludoteca</p></div></a>
+    <a href="ambiente.html"><div id="cineclub"><input id="cin" type="image" src="img/ambiente.png" /><p>Medio Ambiente</p></div></a>
+	</div>
+</div>
 
         </div>
-</div>
+        </div>
+
   <footer>
  <div><a href="http://www.facebook.com/faro.deoriente"><input type="image" src="img/Face_White.png"/></a></div>
 	<div><a href="http://instagram.com/farodeoriente"><input type="image" src="img/Insta_White.png"/></a></div>
@@ -124,10 +152,6 @@ $(document).ready(function(){
    $.ajaxSetup({ cache: false });
  });
  
- $(document).ready(function(){
-
-      $(".center").load("http://www.farodeoriente.org/prueba/index.html");
-   });
  
 </script>
 
