--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script type="text/javascript" charset="utf-8" src="plugins/cordova-plugin-inappbrowser/www/inappbrowser.js"></script>
 <script type="text/javascript" charset="utf-8" src="plugins/cordova-plugin-whitelist/whitelist.js"></script>
 </script>
-
+<script type="text/javascript" src="js/ajax.js"></script>
 <script type="text/javascript" src="js/iscrolla.js"></script>
 <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 <!--<script type="text/javascript" src="js/jquery.js"></script>-->
