--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title></title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-
+<meta http-equiv="Cache-control" content="no-cache"> 
 <link rel="stylesheet" type="text/css" href="css/page.css" />
 <link rel="stylesheet" type="text/css" href="css/iscrolla.css"/>
 <script type="text/javascript" charset="utf-8" src="plugins/cordova-plugin-statusbar/www/statusbar.js"></script>
@@ -12,7 +12,6 @@
 <script type="text/javascript" charset="utf-8" src="plugins/cordova-plugin-inappbrowser/www/inappbrowser.js"></script>
 <script type="text/javascript" charset="utf-8" src="plugins/cordova-plugin-whitelist/whitelist.js"></script>
 </script>
-<script type="text/javascript" src="js/ajax.js"></script>
 <script type="text/javascript" src="js/iscrolla.js"></script>
 <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 <!--<script type="text/javascript" src="js/jquery.js"></script>-->
