--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <meta http-equiv="Cache-control" content="no-cache"> 
 <link rel="stylesheet" type="text/css" href="css/page.css" />
 <link rel="stylesheet" type="text/css" href="css/iscrolla.css"/>
+<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="plugins/cordova-plugin-statusbar/www/statusbar.js"></script>
 <script type="text/javascript" charset="utf-8" src="plugins/cordova-plugin-splashscreen/www/splashscreen.js"></script>
 <script type="text/javascript" charset="utf-8" src="plugins/cordova-plugin-inappbrowser/www/inappbrowser.js"></script>
 <script type="text/javascript" charset="utf-8" src="plugins/cordova-plugin-whitelist/whitelist.js"></script>
 </script>
 <script type="text/javascript" src="js/iscrolla.js"></script>
-<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 <!--<script type="text/javascript" src="js/jquery.js"></script>-->
 <script type="text/javascript" src="js/fastclick.js"></script>
 
@@ -147,7 +147,9 @@ speed: 100
       $(".cartelera").load("http://www.farodeoriente.org/prueba/slider.html");
    });
 </script>
-
+<script type="text/javascript">
+$.ajaxSetup({ cache:false });
+</script>
 
 </body>
 </html>
