--- a/tres.html
+++ b/tres.html
@@ -11,10 +11,11 @@
 
 <style>
 	#todo{ background-color:#FFF; border:2px solid #000;}
-	#imagen img{width:100%;height:40%;}
+	#imagen img{width:100%;height:25%;}
 	.fecha{ margin:0;padding:0; border-bottom:2px solid #000;  width:99.85%; }
 	.fecha h3,h4{margin:0;padding:0; margin-left:10px;}
-	#description p{margin:10px;}
+	#description p,h3,h2,h1,strong{margin:10px;text-align:justify;}
+	#description ul,li{margin:0 3% 0 3%;}
 
 #contenido{margin-top:65px;margin-bottom:65px;text-align:justify;}
 
